<resources>
    <string name="app_name">Psuplays</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="admin">Admin</string>
    <string name="student">Student</string>
    <string name="sign_up">Sign Up</string>
    <string name="fgt_psswd">Forgot Password</string>
    <string name="logo">logo</string>
    <string name="test">test</string>
    <string name="email">Enter .psu email</string>
    <string name="enter_password">Enter Password</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="answer">Answer</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="place_holder">Place holder</string>
    <string name="changePassword">Change Password</string>
    <string name="LoginAs">LOGIN AS</string>
    <string name="birth_date">Birth Date<sup><small>*</small></sup> (MM/DD/YYYY)</string>
    <string name="height">Height<sup><small>*</small></sup> (cm)</string>
    <string name="weight">Weight<sup><small>*</small></sup> (lbs)</string>
    <string name="medical_condition">Any Medical Condition \n(Optional)</string>
    <string name="emergency_cname">Emergency Contact Name<sup><small>*</small></sup></string>
    <string name="emergency_cnum">Emergency Contact Number<sup><small>*</small></sup></string>
    <string name="submit">Submit</string>
    <string name="medical_info">Medical Info.</string>
    <string name="Message">Student Dashboard Implementation</string>
    <string name="title_activity_student__dasboard">Student_Dasboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="Live_Games">Live Games</string>
    <string name="Sports">Sports</string>
    <string name="Users">Users</string>

    <!-- Test strings-->
    <string name="student_dashboard">STUDENT DASHBOARD</string>
    <string name="admin_dashboard">ADMIN DASHBOARD</string>
    <string name="Basketball">Monday</string>
    <string name="Soccer">Tuesday</string>
    <string name="Tennis">Wednesday</string>
    <string name="sports">Sports</string>
    <string name="edit_sport_list">Edit Sport List</string>
    <string name="generate_schedule">Generate Schedule</string>
    <string name="select_a_sport">Select a sport:</string>
    <string name="select_a_semester">Select a semester:</string>
    <string name="sport_schedule">Sport Schedule</string>
    <string name="select_a_date">Select a date:</string>
    <string name="create_a_new_team">Create a New Team</string>
    <string name="team_name">Team Name</string>
    <string name="description_optional">Team Description</string>
    <string name="create_team">Create Team</string>
    <string name="livechat">LiveChat</string>
    <string name="select_semester">Select A Semester</string>
    <string name="select_sport">Select a Sport</string>
    <string name="join_existing_team">Join Existing Team</string>
    <string name="create_new_team">Create New Team</string>
    <string name="test2">test</string>
    <string name="AddAdmin">Add Admin</string>
    <string name="addSports">Add Sport</string>
    <string name="title_activity_admin__dasboard">Admin_Dashboard</string>
    <string name="description">description</string>
    <string name="create_newteam">Create new Team</string>
    <string name="select_date">Select date</string>
    <string name="team_approval">Team Approval</string>
    <string name="manage_admin">Manage Admin</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_sport">Add Sport</string>
    <string name="start_live_stream">Start Live Stream</string>
    <string name="name_of_sport">Name of Sport</string>
    <string name="min_players">Min # of players in a team</string>
    <string name="max_players">Max # of players in a team</string>
    <string name="create_sport">Create Sport</string>
    <string name="max_teams">Max # of teams</string>
    <string name="current_sports">Current Sports</string>
    <string name="start_live_score">Start Live Score</string>
    <string name="home_team_name">Home Team Name</string>
    <string name="away_team_name">Away Team Name</string>
    <string name="home_team_score">Home Team Score</string>
    <string name="away_team_score">Away Team score</string>

    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>


    <!-- Preferences -->
    <string name="pref_sync_frequency">Contacting regarding</string>
    <string name="pref_sync_frequency_summary">Please select an option</string>
    <string name="pref_user_name">Name</string>
    <string name="pref_user_name_summary">Please enter your first and last name</string>

    <string name="pref_user_profile">Contact US</string>
    <string name="click_to_edit">Click on Admin to edit info:</string>
    <string name="versus">VS</string>
    <string name="no_live_games">No live games at current moment.\nPlease check back later.</string>
    <string name="sportname">SportName</string>
    <string name="pending_teams">Pending teams:\n(Click on team name to approve or deny)</string>
    <string name="approved_teams">Approved Teams:</string>
    <string name="admin_stream_info">Instructions:\nFill out the form below.\nTHEN\nChoose live stream to upload live video and scores.\nOR\nChoose live score to update just the score.</string>
    <string name="or">OR</string>
    <string name="scores">Scores</string>
    <string name="add_score">Add Score</string>
    <string name="sub_score">Subtract Score</string>
    <string name="end_stream">End Stream</string>
    <string name="play_stream">Play Stream\n(External App)</string>
    <string name="live_score_info">Live Score Dashboard</string>
    <string name="end_game">End Game</string>
    <string name="create_game">Create Game</string>
    <string name="schedule">Game Schedule</string>
    <string name="Enter_team_name">Enter Team Name</string>
    <string name="request_team">Request Team</string>
    <string name="add_player">Add Player</string>
    <string name="players_email">Enter player\'s email</string>
    <string name="your_teams">Your Teams:</string>
    <string name="favourite_color">What is your favourite color?</string>
    <string name="city_born">What city where you born in?</string>
    <string-array name="IssueRegarding">
        <item name="LS">LiveStreams</item>
        <item name="LS">LiveScores</item>
        <item name="L">LeaderBoard</item>
        <item name="AF">AccountFunctionality</item>
        <item name="O">Other</item>
    </string-array>
    <string-array name="AccountType">
        <item name="Admin">Admin</item>
        <item name="Student">Student</item>
    </string-array>
    <!--  -->

    <!-- Spinners -->
    <string-array name="sportList">
        <item>Basketball</item>
        <item>Tennis</item>
        <item>Indoor Soccer</item>
    </string-array>

    <string-array name="semesterlist">
        <item>Spring</item>
        <item>Summer</item>
        <item>Fall</item>
        <item>Winter</item>
    </string-array>

</resources>