<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/admin_navigation"
    app:startDestination="@+id/nav_admin_live_games">

    <fragment
        android:id="@+id/nav_admin_live_games"
        android:name="com.example.psuplays.AdminLiveGamesFragment"
        android:label="@string/Live_Games"
        tools:layout="@layout/fragment_admin_live_games" />

    <fragment
        android:id="@+id/nav_admin_sports"
        android:name="com.example.psuplays.AdminSportsFragment"
        android:label="@string/Sports"
        tools:layout="@layout/fragment_admin_sports" />

    <fragment
        android:id="@+id/nav_manage_admin"
        android:name="com.example.psuplays.AdminManageAdminFragment"
        android:label="@string/Users"
        tools:layout="@layout/fragment_admin_manage_admin" />

    <fragment
    android:id="@+id/nav_team_approval"
    android:name="com.example.psuplays.AdminTeamApprovalFragment"
    android:label="@string/Users"
    tools:layout="@layout/fragment_admin_team_approval" />

</navigation>